[package]
authors = ["asdfish"]
description = "terminal music player"
edition = "2024"
license = "GPL-3.0-or-later"
readme = "README.md"
name = "empl"
repository = "https://github.com/asdfish/empl"
version = "2.0.0"
default-run = "empl"

[[bin]]
name = "empl"
path = "src/main.rs"

[[bin]]
name = "repl"
path = "src/bin/repl.rs"

[[bench]]
name = "seq_fns"
harness = false

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
awedio = { version = "0.4.1", default-features = false, features = ["async", "cpal", "symphonia-all"] }
bumpalo = { version = "3.17.0", default-features = false, features = ["collections"] }
crossterm = { version = "0.29.0", default-features = false, features = ["event-stream", "windows"] }
enum-map = { version = "2.7.3", default-features = false }
fastrand = { version = "2.3.0", default-features = false }
futures-core = { version = "0.3.31", default-features = false }
generativity = { version = "1.1.0", default-features = false }
nonempty-collections = { version = "0.3.0", default-features = false }
pin-project-lite = { version = "0.2.16", default-features = false }
qcell = { version = "0.5.4", default-features = false, features = ["exclusion-set"] }
tokio = { version = "1.45.0", default-features = false, features = ["io-std", "io-util", "rt", "sync"] }
unicode-ident = { version = "1.0.18", default-features = false }
unicode-width = { version = "0.2.0", default-features = false }

[dev-dependencies]
criterion = { version = "0.6.0", default-features = false }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[profile.release.package."*"]
codegen-units = 1

[workspace.metadata.cross.target.'cfg(linux)']
pre-build = [
          "dpkg --add-architecture ${CROSS_DEB_ARCH}",
          "apt-get update",
          "apt-get install libasound2-dev:${CROSS_DEB_ARCH} --yes"
]
