[package]
name = "empl"
version = "3.0.0"
edition = "2024"

[dependencies]
bstr = { version = "1.12.0", default-features = false }
cfg-if = { version = "1.0.1", default-features = false }
const_format = { version = "0.2.34", default-features = false, features = ["fmt"] }
getargs = { version = "0.5.0", default-features = false }
itertools = { version = "0.14.0", default-features = false }
libc = { version = "0.2.174", default-features = false }

[dev-dependencies]
arrayvec = { version = "0.7.6", default-features = false }

[target."cfg(unix)".dependencies]
errno = { version = "0.3.13", default-features = false }
