[package]
name = "proc_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
ident_case = { version = "1.0.1", default-features = false }
proc-macro2 = { version = "1.0.95", default-features = false, features = ["proc-macro"] }
quote = { version = "1.0.40", default-features = false, features = ["proc-macro"] }
syn = { version = "2.0.104", default-features = false, features = ["extra-traits", "full", "parsing", "printing", "proc-macro"] }
